--- a/package.json
+++ b/package.json
@@ -4,26 +4,34 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "dev": "vite --mode development",
+    "prod": "vite --mode production",
+    "build:prod": "vue-tsc && vite build --mode prod",
     "preview": "vite preview"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.3.4",
     "element-plus": "^2.2.30",
+    "pinia": "^2.0.32",
+    "pinia-plugin-persist": "^1.0.0",
+    "qs": "^6.11.0",
     "vue": "^3.2.45",
     "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.58.0",
     "sass-loader": "7.3.1",
     "style-loader": "^3.3.1",
+    "svg-sprite-loader": "^6.0.11",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.14.2",
     "unplugin-vue-components": "^0.23.0",
     "vite": "^4.1.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.0.24"
   }
 }
